{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 15,
  "lineage": "332b0b12-0420-31aa-79a3-ed7879bd1375",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c914bc38f6f51b81",
            "domain": "vpc",
            "id": "eipalloc-0c914bc38f6f51b81",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-191-96-41.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.96.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "shopping"
            },
            "tags_all": {
              "Name": "shopping"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:247715616872:internet-gateway/igw-0c4685fe3d2cce93b",
            "id": "igw-0c4685fe3d2cce93b",
            "owner_id": "247715616872",
            "tags": {
              "Name": "shopping"
            },
            "tags_all": {
              "Name": "shopping"
            },
            "vpc_id": "vpc-0817800086e49b4b4"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c914bc38f6f51b81",
            "connectivity_type": "public",
            "id": "nat-0bdc3632bcaad7f27",
            "network_interface_id": "eni-083f1a19c570a1e78",
            "private_ip": "10.0.1.38",
            "public_ip": "18.191.96.41",
            "subnet_id": "subnet-036f8f713fee5e8cc",
            "tags": {
              "Name": "shopping"
            },
            "tags_all": {
              "Name": "shopping"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02e79689586ee094c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bdc3632bcaad7f27",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e79689586ee094c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.route_table_private",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c4685fe3d2cce93b",
            "id": "r-rtb-090c8cd687e207c151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090c8cd687e207c15",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.route_table_public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:247715616872:route-table/rtb-02e79689586ee094c",
            "id": "rtb-02e79689586ee094c",
            "owner_id": "247715616872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "shopping-private"
            },
            "tags_all": {
              "Name": "shopping-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0817800086e49b4b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:247715616872:route-table/rtb-090c8cd687e207c15",
            "id": "rtb-090c8cd687e207c15",
            "owner_id": "247715616872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "shopping-public"
            },
            "tags_all": {
              "Name": "shopping-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0817800086e49b4b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_subnet_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db080914e0e596a4",
            "route_table_id": "rtb-02e79689586ee094c",
            "subnet_id": "subnet-03d43901146d11fe1"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table_private",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_subnet_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7f89dc5657233bf",
            "route_table_id": "rtb-02e79689586ee094c",
            "subnet_id": "subnet-0c7430a9a0e13678a"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table_private",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_subnet_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e0355c98a6dfeb3",
            "route_table_id": "rtb-090c8cd687e207c15",
            "subnet_id": "subnet-036f8f713fee5e8cc"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table_public",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_subnet_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c47842b8327b7b3d",
            "route_table_id": "rtb-090c8cd687e207c15",
            "subnet_id": "subnet-0eda95abce8f1e4b9"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table_public",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:247715616872:security-group/sg-0c3492c304d49c28f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c3492c304d49c28f",
            "ingress": [],
            "name": "terraform-20220907181111658600000002",
            "name_prefix": "terraform-",
            "owner_id": "247715616872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopping"
            },
            "tags_all": {
              "Name": "shopping"
            },
            "timeouts": null,
            "vpc_id": "vpc-0817800086e49b4b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-99542562",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c3492c304d49c28f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.security_group",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "igress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1466403926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c3492c304d49c28f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.security_group",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1925454346",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c3492c304d49c28f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.security_group",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:247715616872:subnet/subnet-03d43901146d11fe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d43901146d11fe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247715616872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopping-private-1"
            },
            "tags_all": {
              "Name": "shopping-private-1"
            },
            "vpc_id": "vpc-0817800086e49b4b4"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:247715616872:subnet/subnet-0c7430a9a0e13678a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7430a9a0e13678a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247715616872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopping-private-2"
            },
            "tags_all": {
              "Name": "shopping-private-2"
            },
            "vpc_id": "vpc-0817800086e49b4b4"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:247715616872:subnet/subnet-036f8f713fee5e8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036f8f713fee5e8cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247715616872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopping-public-1"
            },
            "tags_all": {
              "Name": "shopping-public-1"
            },
            "vpc_id": "vpc-0817800086e49b4b4"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:247715616872:subnet/subnet-0eda95abce8f1e4b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eda95abce8f1e4b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247715616872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopping-public-2"
            },
            "tags_all": {
              "Name": "shopping-public-2"
            },
            "vpc_id": "vpc-0817800086e49b4b4"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:247715616872:vpc/vpc-0817800086e49b4b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03cb7adabb35cf73e",
            "default_route_table_id": "rtb-0d4aef2a0f291937c",
            "default_security_group_id": "sg-0db3be8075c90723c",
            "dhcp_options_id": "dopt-0e7b9329826aea10e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0817800086e49b4b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4aef2a0f291937c",
            "owner_id": "247715616872",
            "tags": {
              "Name": "shopping"
            },
            "tags_all": {
              "Name": "shopping"
            }
          }
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3416038bdb17fb",
            "arn": "arn:aws:ec2:us-east-2:247715616872:instance/i-0801a75fd96d5b1e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0801a75fd96d5b1e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0822774239e87f78e",
            "private_dns": "ip-10-0-1-10.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-3-145-155-68.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.155.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ee12726fade956b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c3492c304d49c28f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036f8f713fee5e8cc",
            "tags": {
              "Name": "shopping-bastion"
            },
            "tags_all": {
              "Name": "shopping-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3492c304d49c28f"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.security_group",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}